--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,11 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
 
+    <uses-permission android:name="android.permission.POST_NOTIFICATIONS" />
+    <uses-permission android:name="android.permission.SCHEDULE_EXACT_ALARM" />
+    <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED" />
+    <uses-permission android:name="android.permission.SYSTEM_ALERT_WINDOW"/>
+
     <application
         android:name=".OdevApplication"
         android:allowBackup="true"
@@ -29,6 +34,14 @@
         <activity
             android:name=".ui.main.MainActivity"
             android:exported="false" />
+
+        <receiver android:name=".common.AlarmReceiver"
+            android:enabled="true"
+            android:exported="false">
+            <intent-filter>
+                <action android:name="com.mobilProgramlama.odev.ALARM_TRIGGER" />
+            </intent-filter>
+        </receiver>
     </application>
 
 </manifest>
