--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -5,7 +5,7 @@
     <uses-permission android:name="android.permission.POST_NOTIFICATIONS" />
     <uses-permission android:name="android.permission.SCHEDULE_EXACT_ALARM" />
     <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED" />
-    <uses-permission android:name="android.permission.SYSTEM_ALERT_WINDOW"/>
+    <uses-permission android:name="android.permission.SYSTEM_ALERT_WINDOW" />
 
     <application
         android:name=".OdevApplication"
@@ -18,6 +18,9 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.Odev"
         tools:targetApi="31">
+        <activity
+            android:name=".ui.reminder.ReminderActivity"
+            android:exported="true" />
         <activity
             android:name=".ui.reminder_add.ReminderAddActivity"
             android:exported="false" />
@@ -35,7 +38,8 @@
             android:name=".ui.main.MainActivity"
             android:exported="false" />
 
-        <receiver android:name=".common.AlarmReceiver"
+        <receiver
+            android:name=".common.AlarmReceiver"
             android:enabled="true"
             android:exported="false">
             <intent-filter>
